field-forms/objects/Form_Answer__c/Form_Answer__c.object-meta.xml
<CustomObject>
    <label>Form Answer</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Form Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>