field-forms/objects/Form_Answer__c/fields/Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Form_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Question</label>
    <referenceTo>Form_Question__c</referenceTo>
    <relationshipLabel>Form Answers</relationshipLabel>
    <relationshipName>Form_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>