field-forms/objects/Form_Answer__c/fields/Form_Question_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Form_Question_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Analytics dimension: the stable question identity behind this answer, denormalized from the question's catalog link at save time (FormAnswerAnalyticsTrigger). Form_Question__c is per-template, so answer-grain trends fragment across form versions; the catalog id is what lets Tableau ask "door-seal failures across all forms and years".</description>
    <label>Question Catalog Entry</label>
    <referenceTo>Form_Question_Catalog__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>