field-forms/objects/Form_Answer__c/fields/Linked_Form__c.field-meta.xml
<CustomField>
    <fullName>Linked_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Form</label>
    <referenceTo>Linked_Form__c</referenceTo>
    <relationshipLabel>Form Answers</relationshipLabel>
    <relationshipName>Form_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>