field-forms/objects/Form_Answer__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by FormAnswerScoringTrigger when Scoring_Enabled__c is on at both the org and template level. True when NeuraFormScoringEvaluator(Pass_Criteria__c, Answer__c) returns true, false otherwise. Salesforce Checkbox cannot be nullable; historical answers and answers under non-scoring templates remain false but Points_Earned__c stays null — treat (Passed__c=false AND Points_Earned__c IS NULL) as "not evaluated" for reports.</description>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>