field-forms/objects/Form_Answer__c/fields/Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>Points_Earned__c</fullName>
    <description>Points awarded for this answer in the Linked_Form score. Equal to the resolved catalog Weight__c when Passed__c is true, zero when Passed__c is false, null when the answer has not been evaluated (no Pass_Criteria__c, scoring flag off, or trigger not yet run). Linked_Form__c.Score__c is the sum of this field across all answers in the response.</description>
    <label>Points Earned</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>