field-forms/objects/Form_Answer__c/fields/Related_Comment__c.field-meta.xml
<CustomField>
    <fullName>Related_Comment__c</fullName>
    <label>Related Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>