field-forms/objects/Form_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Linked_Form__c</columns>
    <columns>Type__c</columns>
    <columns>Form_Question__c</columns>
    <columns>Answer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>